@@ -1,5 +1,11 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.582 2006/03/12 19:03:34 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.583 2006/03/13 16:33:20 wolf31o2 Exp $
+
+  13 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/livecdfs-update.sh:
+  Finalized the sync from my fsscript for 2006.0 into catalyst. It is now no
+  longer necessary to use a fsscript to duplicate the official Gentoo LiveCD
+  builds.
 
   12 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/rc-update.sh:
